# minimal-second-brain

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/hooks/: update-manifest.py
.github/: copilot-instructions.md
.github/scripts/: sync-manifests.py  vault-cleaner.py
.github/workflows/: manifest-sync.yml  tests.yml  vault-cleaning.yml
tests/: __init__.py  conftest.py  test_sync_manifests.py  test_update_manifest.py  test_vault_cleaner.py
